@@ -572,7 +572,7 @@ Font.PLAIN.label=PLAIN
 Font.BOLD.label=BOLD
 Font.ITALIC.label=ITALIC
 
-MainPanel.keyBindings=C+N:Alt+Left:Alt+Right:Alt+F:Alt+E:Alt+M:Alt+W:Alt+H
+MainPanel.keyBindings=C+N:Alt+Left:Alt+Right:Alt+F:Alt+E:Alt+M:Alt+W:Alt+H:Alt+K
 MainPanel.keyBindings.C+N.Action=message-new
 MainPanel.keyBindings.C+N.Key=control N
 MainPanel.keyBindings.Alt+Left.Action=select-folder-panel
@@ -589,6 +589,8 @@ MainPanel.keyBindings.Alt+W.Key=alt W
 MainPanel.keyBindings.Alt+W.Action=select-menu-W
 MainPanel.keyBindings.Alt+H.Key=alt H
 MainPanel.keyBindings.Alt+H.Action=select-menu-H
+MainPanel.keyBindings.Alt+K.Key=alt K
+MainPanel.keyBindings.Alt+K.Action=help-keybindings
 
 ContentPanel.keyBindings=C+F4:Alt+Down:Alt+Up:C+A+Left:C+A+Right:C+A+Up:C+A+Down:S+C+A+Left:S+C+A+Right:S+C+A+Up:S+C+A+Down
 ContentPanel.keyBindings.C+F4.Action=file-close
@@ -622,7 +624,7 @@ FolderPanel.keyBindings.C+E.Key=control E
 FolderPanel.keyBindings.C+O.Action=file-open
 FolderPanel.keyBindings.C+O.Key=control O
 
-FolderWindow.keyBindings=C+A:C+C:C+D:C+F:C+G:C+O:C+R:Space:Enter
+FolderWindow.keyBindings=C+A:C+C:C+D:C+F:C+G:C+O:C+P:C+R:Space:Enter:F3:F5:Slash:Tab
 FolderWindow.keyBindings.C+A.Action=message-reply-all
 FolderWindow.keyBindings.C+A.Key=control A
 #FolderWindow.keyBindings.C+C.Action=copy-to-clipboard
@@ -635,14 +637,26 @@ FolderWindow.keyBindings.C+G.Action=message-goto
 FolderWindow.keyBindings.C+G.Key=control G
 FolderWindow.keyBindings.C+O.Action=file-open
 FolderWindow.keyBindings.C+O.Key=control O
+FolderWindow.keyBindings.C+P.Action=file-print
+FolderWindow.keyBindings.C+P.Key=control P
 FolderWindow.keyBindings.C+R.Action=message-reply
 FolderWindow.keyBindings.C+R.Key=control R
 FolderWindow.keyBindings.Space.Action=file-open
 FolderWindow.keyBindings.Space.Key=SPACE
 FolderWindow.keyBindings.Enter.Action=file-open
 FolderWindow.keyBindings.Enter.Key=ENTER
+FolderWindow.keyBindings.Tab.Action=message-next-unread
+FolderWindow.keyBindings.Tab.Key=TAB
+FolderWindow.keyBindings.Slash.Action=folder-search
+FolderWindow.keyBindings.Slash.Key=SLASH
+FolderWindow.keyBindings.F3.Action=folder-search
+FolderWindow.keyBindings.F3.Key=F3
+FolderWindow.keyBindings.F5.Action=folder-update
+FolderWindow.keyBindings.F5.Key=F5
+FolderWindow.keyBindings.F12.Action=folder-empty
+FolderWindow.keyBindings.F12.Key=F12
 
-ReadMessageWindow.keyBindings=A+1:A+2:C+A:C+C:C+D:C+F:C+R
+ReadMessageWindow.keyBindings=A+1:A+2:C+A:C+C:C+D:C+F:C+P:C+R
 ReadMessageWindow.keyBindings.A+1.Action=message-select-editor
 ReadMessageWindow.keyBindings.A+1.Key=alt 1
 ReadMessageWindow.keyBindings.A+2.Action=message-select-attachment
@@ -655,6 +669,8 @@ ReadMessageWindow.keyBindings.C+D.Action=message-delete
 ReadMessageWindow.keyBindings.C+D.Key=control D
 ReadMessageWindow.keyBindings.C+F.Action=message-forward
 ReadMessageWindow.keyBindings.C+F.Key=control F
+ReadMessageWindow.keyBindings.C+P.Action=file-print
+ReadMessageWindow.keyBindings.C+P.Key=control P
 ReadMessageWindow.keyBindings.C+R.Action=message-reply
 ReadMessageWindow.keyBindings.C+R.Key=control R
 
