@@ -40,6 +40,9 @@
 <tr><td>Subscribe to Folder(s)</td><td>Control-B</td><td>Folder Panel</td></tr>
 <tr><td>Goto message</td><td>Control+G</td><td>Message Table</tr>
 <tr><td>Select Next Unread</td><td>Tab</td><td>Message Table</tr>
+<tr><td>Search Folder</td><td>F3<br>/</td><td>Message Table</tr>
+<tr><td>Get New Messages</td><td>F5</td><td>Message Table</tr>
+<tr><td>Empty Trash</td><td>F12</td><td>Message Table</tr>
 </table>
 
 <h2>Address Book Commands</h2>
